--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "prestart": "npm run build",
     "start": "node ."
   },
+  "engines": {
+    "node": "16.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sqrtox/ako.git"
