--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,29 +1,31 @@
----
 env:
   es2021: true
   node: true
 extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
-  - plugin:import/recommended
-  - plugin:import/typescript
 overrides: []
 parser: "@typescript-eslint/parser"
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-  project: ./tsconfig.json
 plugins:
   - "@typescript-eslint"
-  - sort-exports
-  - prefer-arrow
-  - typescript-sort-keys
-  - sort-keys-fix
 rules:
-  "@typescript-eslint/ban-ts-comment":
+  indent:
     - error
-    - ts-expect-error:
-        descriptionFormat: '^: TS\d+ because .+$'
+    - 2
+  linebreak-style:
+    - error
+    - unix
+  quotes:
+    - error
+    - single
+  semi: off
+  "@typescript-eslint/semi":
+    - error
+    - always
+  "@typescript-eslint/sort-type-union-intersection-members": error
   "@typescript-eslint/member-delimiter-style":
     - error
     - multiline:
@@ -34,82 +36,3 @@ rules:
           multiline:
             delimiter: semi
             requireLast: true
-  "@typescript-eslint/no-unused-vars":
-    - warn
-    - ignoreRestSiblings: true
-  "@typescript-eslint/semi":
-    - error
-    - always
-  "@typescript-eslint/sort-type-union-intersection-members": error
-  arrow-body-style:
-    - error
-    - as-needed
-  brace-style:
-    - error
-    - 1tbs
-  comma-dangle:
-    - error
-    - never
-  curly: error
-  func-style:
-    - error
-    - expression
-  import/order:
-    - error
-    - alphabetize:
-        order: asc
-      groups:
-        - builtin
-        - external
-        - parent
-        - sibling
-        - index
-        - object
-        - type
-      newlines-between: never
-  indent:
-    - error
-    - 2
-    - SwitchCase: 1
-  linebreak-style:
-    - error
-    - unix
-  no-multi-spaces: error
-  object-shorthand: error
-  prefer-arrow-callback:
-    - error
-    - allowNamedFunctions: true
-  prefer-arrow/prefer-arrow-functions:
-    - error
-    - singleReturnOnly: true
-  prefer-template: error
-  quotes:
-    - error
-    - single
-  semi: "off"
-  sort-exports/sort-exports:
-    - error
-    - sortDir: asc
-  sort-imports:
-    - error
-    - ignoreDeclarationSort: true
-  sort-keys-fix/sort-keys-fix:
-    - error
-    - asc
-    - caseSensitive: true
-      natural: true
-  spaced-comment:
-    - error
-    - always
-    - markers:
-        - /
-  typescript-sort-keys/interface:
-    - error
-    - asc
-    - caseSensitive: true
-      natural: true
-      requiredFirst: true
-settings:
-  import/resolver:
-    typescript:
-      alwaysTryTypes: true
