--- a/package.json
+++ b/package.json
@@ -2,25 +2,20 @@
   "name": "ako",
   "version": "1.0.0",
   "description": "It is a multifunctional Discord bot dedicated to a specific server.",
-  "main": "./dist/bot.js",
+  "main": "./dist/app/bot.js",
   "scripts": {
     "prebuild": "rimraf ./dist/",
     "build": "run-s build:*",
-    "build:tsc": "tsc",
-    "build:tsc-alias": "tsc-alias",
+    "build:swc": "swc src --only **/*.ts -d ./dist/",
     "prestart": "npm run build",
     "start": "node ."
-  },
-  "engines": {
-    "node": "16.x"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sqrtox/ako.git"
   },
   "keywords": [
-    "ako",
-    "aarr"
+    "discord"
   ],
   "author": "sqrtox",
   "license": "Apache-2.0",
@@ -29,25 +24,21 @@
   },
   "homepage": "https://github.com/sqrtox/ako#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "eslint": "^8.25.0",
-    "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-sort-exports": "^0.7.0",
-    "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "eslint-plugin-typescript-sort-keys": "^2.1.0",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.14",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "tsc-alias": "^1.7.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@sqrtox/deta": "^1.1.0",
-    "canvas": "^2.10.1",
+    "canvas": "^2.10.2",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
-    "parse-css-color": "^0.2.1"
+    "log4js": "^6.7.0",
+    "parse-css-color": "^0.2.1",
+    "queue": "^6.0.2"
   }
 }
