--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "git+https://github.com/sqrtox/ako.git"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "keywords": [
     "discord"
   ],
