--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/sqrtox/ako.git"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16.x"
   },
   "keywords": [
     "discord"
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.14",
+    "@types/node-cron": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.26.0",
@@ -42,6 +43,8 @@
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "log4js": "^6.7.0",
+    "node-cron": "^3.0.2",
+    "node-emoji-clock": "^0.1.0",
     "parse-css-color": "^0.2.1",
     "queue": "^6.0.2"
   }
