--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "canvas": "^2.10.2",
     "change-case": "^4.1.2",
+    "dayjs": "^1.11.6",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "log4js": "^6.7.0",
